infra/k8s/dev/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment-dev
  namespace: playpal-dev
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: frontend
          image: YOUR_DOCKER_REGISTRY/playpal-frontend:latest # Placeholder for image, will be replaced by CI
          ports:
            - containerPort: 80
