infra/k8s/dev/matching-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matching-deployment
  namespace: playpal-dev
  labels:
    app: matching-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matching-service
  template:
    metadata:
      labels:
        app: matching-service
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: matching-service
          image: YOUR_DOCKER_REGISTRY/playpal-matching-service:latest
          ports:
            - containerPort: 3000
