infra/k8s/dev/matching-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matching-service-dev
  namespace: playpal-dev
  labels:
    app: matching-service
spec:
  selector:
    app: matching-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
