infra/k8s/dev/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: playpal-dev
  labels:
    app: notification-service
spec:
  selector:
    app: notification-service
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
